# Anomaly-Detector-Cpp

./: .~lock.csvTest.csv#  AnomalyDetector.h  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  StandardIO.cpp  StandardIO.h  algoSettings.cpp  algoSettings.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  csvTest.csv  main.cpp  minCircle.cpp  minCircle.h  receiveCSV.cpp  receiveCSV.h  sendCSV.cpp  sendCSV.h  timeseries.cpp  timeseries.h
Commands/: algoSettings.h  receiveCSV.cpp  receiveCSV.h  sendCSV.h
Detetcors/: HybridAnomalyDetector.cpp  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h
IO/: StandardIO.h
